# ServerFrame

./: CMakeLists.txt  readme.md
.ssh/: id_rsa  id_rsa.pub
Server/: log.cpp  log.h
logger/: log.cpp  log.h
tests/: test.cpp
